# mcp-server-eol

./: .gitignore  Dockerfile  Makefile  README.md  USAGE.md  config.json  docker-compose.yml  pyproject.toml  run_tests.py
.github/workflows/: docker-publish.yml
scripts/: create-tag.sh  next-version.sh
src/mcp_server_eol/: __init__.py  client.py  server.py
tests/: README.md  test_api_client.py  test_comprehensive.py  test_quick.py  test_temporal.py
